<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nogaz.snookercount.MainActivity"
    android:background="@drawable/table_cloth"
    android:weightSum="5">



        <Button
            android:id="@+id/NewFrame2Players_button"
            android:text="@string/twoPlayers"
            android:layout_width="@dimen/big_button_dimen"
            android:layout_height="@dimen/medium_button_dimen"
            android:onClick="StartNewFrame"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/NewFrame3Players_button"
            android:text="@string/threePlayers"
            android:layout_width="@dimen/big_button_dimen"
            android:layout_height="@dimen/medium_button_dimen"
            android:onClick="StartNewFrame"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/LeaderBoards_button"
            android:text="@string/leaderboard"
            android:layout_width="@dimen/big_button_dimen"
            android:layout_height="@dimen/medium_button_dimen"
            android:onClick="showLeaderboards"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/EventList_button"
            android:text="@string/eventList"
            android:layout_width="@dimen/big_button_dimen"
            android:layout_height="@dimen/medium_button_dimen"
            android:onClick="showEventList"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/Credits_button"
            android:text="@string/credits"
            android:layout_width="@dimen/big_button_dimen"
            android:layout_height="@dimen/medium_button_dimen"
            android:onClick="showCredits"
            android:layout_weight="1"/>

</LinearLayout>
